--- a/index.html
+++ b/index.html
@@ -1,3 +1,21 @@
+<!-- Download HTML button (paste into your index.html) -->
+<a 
+  href="https://raw.githubusercontent.com/shivashankarvalmiki-hue/Visualized-Profile-Resume/main/index.html" 
+  download="Shiva_Shankar_Visualized_Resume.html"
+  style="
+    display:inline-block;
+    padding:10px 18px;
+    border-radius:8px;
+    text-decoration:none;
+    font-weight:700;
+    background:linear-gradient(135deg,#00d4ff,#a855f7);
+    color:white;
+    box-shadow:0 6px 18px rgba(0,0,0,0.12);
+    margin:12px 0;
+  "
+>
+  ⬇ Download HTML Version
+</a>
 <!DOCTYPE html>
 <html lang="en">
 <head>
